--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ button{border: none; box-shadow: none; background:transparent;}
 #newmenu {width:100%;height:30px;padding:10px 5px 0px 5px;background-color:#f6f6f6;}
 #openSliderbtn {margin-right:20px;}
 #openSliderbtn img {width:20px;height:18px;}
-#reloadbtn {margin-left:10px;margin-right:10px;}
+#reloadbtn, #savefilebtn, #saveasfilebtn {margin-left:10px;margin-right:10px;}
 #reloadbtn img {width:17px;height:18px;}
 
 #list_name {font-size:24px;font-weight:bold;color:darkorange;}
