--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {font-family: Helvetica, Arial, sans-serif;}
 button{border: none; box-shadow: none; background:transparent;}
 #docfilename {width:520px;height:20px;}
-#newmenu {width:100%;height:30px;padding:10px 5px 0px 5px;background-color:#f6f6f6;}
+#newmenu {width:100%;margin-top:0px; height:50px;padding:10px 5px 0px 5px;background-color:#f6f6f6;}
 #openSliderbtn {margin-right:20px;}
 #openSliderbtn img {width:20px;height:18px;}
 #reloadbtn, #savefilebtn, #saveasfilebtn {margin-left:10px;margin-right:10px;}
@@ -15,7 +15,7 @@ button{border: none; box-shadow: none; background:transparent;}
 #list_search p {margin:0;}
 
 
-#searchfiles {margin: 10px 0; padding:5px; width:560px; height: 30px; border: 1px solid #666; background:#f4f4f4;}
+#searchfiles {margin: 10px 0; padding:5px; width:500px; height: 30px; border: 1px solid #666; background:#f4f4f4;}
 
 #searchbtn img {width:18px;height:18px;}
 #closeSliderbtn, #closeSliderbtn2 {float:right;}
@@ -23,7 +23,7 @@ button{border: none; box-shadow: none; background:transparent;}
 #filesessionmsg {margin-top:20px; font-size: 10px; font-weight: bold; display:none;}
 #resetmhtexteditorbtn img {margin-right:10px;}
 
-#searchname {margin-left:180px;}
+#searchname {margin-left:160px;}
 #searchtext {margin-left:40px;}
 
 #docslistingdiv {
@@ -64,3 +64,7 @@ button{border: none; box-shadow: none; background:transparent;}
 .deletefilebtn img {width:12px; height:12px; margin-right: 14px;}
 .editfilebtn img {width:17px; height:15px; margin-right: 14px;}
 .hidden {display:none;}
+
+#editorContainer {width:100%; height:100%; margin:0px 0 0 0; padding:0px;}
+
+.webodfeditor-canvas {background-color: white;}
