--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,9 @@ button.iconbtn:hover {background-color:#ddd;}
 button.iconbtn2:hover {background-color:#ddd;}
 
 #docfilename {width: 300px; padding: 6px; border:none; border-bottom: 2px solid #aaa; background-color: transparent; color:#333; font-family:helvetica,arial,sans-serif;font-weight: bold; font-size: 14px;}
-#filename_div {z-index:1500; display:none;margin-top:-57px; margin-left:54px; margin-bottom:3px; background-color:#aaa; width:310px;height:40px;padding:6px 4px 8px 10px;}
+#filename_div {z-index:1500; display:none;margin-top:-50px; margin-left:54px; background-color:#aaa; width:310px;height:40px;padding:6px 4px 8px 10px;}
 #filenameinput {width:200px;height:20px;}
+#fileext {font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight:bold;}
 #submitfilename, #cancelfilename {margin-left:0px; margin-right:0px;}
 #submitfilename img, #cancelfilename img {width:20px; height:20px;}
 
